--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           </div>
         </div>
         <div class="row justify-content-center mt-3">
-          <div class="col-6">
+          <div class="col">
             <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
               <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
